# hdt-connector

./: .gitignore  .travis.yml  Makefile.in  README.md  configure  configure.ac  dependencies  setup.py  version
.conda/: build.sh  environment.yaml  meta.yaml
.travis/: after_failure.sh  after_success.sh  install.sh  script.sh
etc/: logging.yaml  test.hdt  test_literal.hdt
hdt/: dbpedia.py  logger.py
hdt-connector/: Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac
hdt-connector/src/: ConvertProgress.cpp  DBpediaHDTConnector.cpp  DBpediaHDTConnector_wrap.cpp  HDTConnector.cpp  HDTIterator.cpp  HDTUtilities.cpp  Makefile.am  Makefile.in  hdtconnector_so.cpp
hdt-connector/src/include/: ConvertProgress.h  DBpediaHDTConnector.h  HDTConnector.h  HDTIterator.h
hdt/tests/: test_dbpedia.py
hdtconnector/: __init__.py
hdtconnector/tests/: open_hdtconnector_no_notification.py  open_hdtconnector_notification.py  test_libhdtconnector.py  test_performance.py
libhdtconnector/: .ycm_extra_conf.py  autogen.sh  configure.ac
libhdtconnector/m4/: gnulib-comp.m4
libhdtconnector/src/: ConvertProgress.cpp  HDTConnector.cpp  HDTIterator.cpp  HDTIteratorTripleID.cpp  HDTTriple.cpp  HDTTripleID.cpp  Makefile.am  Utilities.cpp  hdtconnector_so.cpp
libhdtconnector/src/include/: ConvertProgress.h  HDTConnector.h  HDTIterator.h  HDTIteratorTripleID.h  HDTTriple.h  HDTTripleID.h  NumpyScalarConverter.h  Utilities.h
src/: DBpediaHDTConnector.cpp  DBpediaHDTConnector_wrap.cpp  Makefile  Makefile.am  Makefile.in
src/.deps/: libtest_la-ConvertProgress.Plo  libtest_la-DBpediaHDTConnector.Plo  libtest_la-main.Plo  main.Po  test-ConvertProgress.Po  test-DBpediaHDTConnector.Po  test-main.Po
src/include/: DBpediaHDTConnector.h
